-Fix: browser-top-bar img height was not automatically calculated on Firefox, so hard code that into css.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -66,6 +66,7 @@ h1 {
 	flex: 0;
 	align-self: center;
 	cursor: pointer;
+	height: 27px;
 }
 #browser-top-bar img:hover {
 	opacity: 0.8;
